force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__Country__c.field-meta.xml
<CustomField>
    <fullName>ssot__Country__c</fullName>
    <label>[DoNotUse]Country</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Country</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>