force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__FormattedInternationalPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__FormattedInternationalPhoneNumber__c</fullName>
    <label>Formatted International Phone Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FormattedInternationalPhoneNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>