force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__IsSMSCapable__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsSMSCapable__c</fullName>
    <label>Is SMS Capable</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsSMSCapable</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>