force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__PhoneCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__PhoneCountryCode__c</fullName>
    <label>Phone Country Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PhoneCountryCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>