force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__PreferenceRankNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreferenceRankNumber__c</fullName>
    <label>Preference Rank</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreferenceRankNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>