force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__PrimaryPhoneType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryPhoneType__c</fullName>
    <label>[DoNotUse]Primary Phone Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryPhoneType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>