force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__PrimaryPhoneTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryPhoneTypeId__c</fullName>
    <label>Primary Phone Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryPhoneTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>