force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__rel_1697761162451_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761162451_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointPhone_DeviceId_map_Devic_rel</label>
    <referenceTo>ssot__Device__dlm</referenceTo>
    <relationshipLabel>ContactPointPhone_DeviceId_map_Devic_rel</relationshipLabel>
    <relationshipName>rel_1697761162451_end</relationshipName>
    <type>Lookup</type>
</CustomField>