force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__ShortCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShortCode__c</fullName>
    <label>Short Code</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShortCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>