force-app/main/default/objects/ssot__ContactPointPhone__dlm/fields/ssot__TelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TelephoneNumber__c</fullName>
    <label>Telephone Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TelephoneNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>